--- a/Files.md.twig
+++ b/Files.md.twig
@@ -1,38 +1,66 @@
-`{{ node.path }}{{ node.name }}`
-
 ## {{ node.summary }}
-{{ node.description|raw }}
+{% if node.description %}{{ node.description|raw }}{% endif %}
 
-{% if node.package is not empty and node.package != '\\' %}### Package
+{% if node.package is not empty and node.package != '\\' %}#### Package
 {{ node.subpackage ? (node.package ~ '\\' ~ node.subpackage) : node.package }}{% endif %}
 
-{% for tagName,tags in node.tags if tagName not in ['link', 'see', 'package', 'subpackage'] %}{% if tagName %}### {{ tagName }}
-{% for tag in tags %}{% if tag.version %}`{{ tag.version }}` {% endif %}{{ tag.description|markdown|raw }}
-{% endfor %}{% endif %}{% endfor %}
+{% for tagName,tags in node.tags if tagName not in ['link', 'see', 'package', 'subpackage'] %}
+{% if tagName %}#### {{ tagName }}
+{% for tag in tags %}
+{% if tag.version %}`{{ tag.version }}` {% endif %}{{ tag.description|raw }}
+{% endfor %}
+{% endif %}{% endfor %}
 
-{% for tagName,tags in node.tags if tagName in ['link', 'see'] %}{% if loop.first %}### See also{% endif %}
-{% for tag in tags %}[{{ tag.description ?: tag.reference }}]({{ tag.reference|route('url') ?: tag.link }})
-{% endfor %}{% endfor %}
+{% for tagName,tags in node.tags if tagName in ['link', 'see'] %}
+{% if loop.first %}#### See also
+{% endif %}
+{% for tag in tags %}
+[{{ tag.description ?: tag.reference }}]({{ tag.reference|route('url') ?: tag.link }})
+{% endfor %}
+{% endfor %}
 
-{% if node.traits|length > 0 %}### Traits</h2>{% for trait in node.traits|sort_asc %}
-{{ trait|route('class:short')|raw }}: *{{ trait.summary }}*
-{% endfor %}{% endif %}
 
-{% if node.interfaces|length > 0 %}### Interfaces</h2>{% for interface in node.interfaces|sort_asc %}
-{{ interface|route('class:short')|raw }}: *{{ interface.summary }}*
-{% endfor %}{% endif %}
+{% if node.traits|length > 0 %}### Traits
+{% for trait in node.traits|sort_asc %}
+* {{ trait|raw }}{% if trait.summary %}: _{{ trait.summary }}_{% endif %}
 
-{% if node.classes|length > 0 %}### Classes</h2>{% for class in node.classes|sort_asc %}
-{{ class|route('class:short')|raw }}: *{{ class.summary }}*
-{% endfor %}{% endif %}
+{% endfor %}
+{% endif %}
 
-{% if node.constants|length > 0 %}### Constants</h2>{% for constant in node.constants|sort_asc %}
-* block('constant')
-{% endfor %}{% endif %}
 
-{% if node.functions|length > 0 %}### Functions</h2>{% for method in node.functions|sort_asc %}
-* block('method')
-{% endfor %}{% endif %}
+{% if node.interfaces|length > 0 %}### Interfaces
+{% for interface in node.interfaces|sort_asc %}
+* {{ interface|raw }}{% if interface.summary %}: _{{ interface.summary }}_{% endif %}
+
+{% endfor %}
+{% endif %}
+
+
+{% if node.classes|length > 0 %}### Classes
+{% for class in node.classes|sort_asc %}
+* [{{ class.name|raw }}](classes/{{ class.name }}){% if class.summary %}: _{{ class.summary }}_{% endif %}
+
+{% endfor %}
+{% endif %}
+
+
+{% if node.constants|length > 0 %}### Constants
+{% for constant in node.constants|sort_asc %}
+* {{ constant.name }}{% if constant.deprecated %} `deprecated`{% endif %}
+
+{% endfor %}
+{% endif %}
+
+
+{% if node.functions|length > 0 %}### Methods
+{% for method in node.functions|sort_asc %}
+* {{ method.name }}{% if method.deprecated %} `deprecated`{% endif %}
+
+{% endfor %}
+{% endif %}
 
 {% if project.settings.shouldIncludeSource %}## Source
 [{{ node.name }}]({{ node.path }}{{ node.name }}){% endif %}
+
+***
+[\\](Home) » Files » `{{ node.path }}`
