--- a/Home.md.twig
+++ b/Home.md.twig
@@ -2,42 +2,38 @@
 
 {% if project.indexes.namespaces|length > 0 or not project.indexes.packages %}
 ### [Namespaces](Namespaces)
-{% else %}
-### Namespaces
-`No functions have been found in this project`
+{% for namespace in project.indexes.namespaces|sort_asc if namespace.name != '\\' %}
+##### [{{ namespace.name|raw }}](namespaces/{{ namespace.name }})
+
+{% endfor %}
 {% endif %}
 
-{% if node.traits|length > 0 %}
-### [Traits](Traits)
-{% else %}
-### Traits
-`No traits have been found in this project`
-{% endif %}
+{#% if project.indexes.traits|length > 0 %}
+### [Traits](Traits) => overview?
+{% endif %#}
 
-{% if node.interfaces|length > 0 %}
-### [Interfaces](Interfaces)
-{% else %}
-### Interfaces
-`No interfaces have been found in this project`
-{% endif %}
+{#% if project.indexes.interfaces|length > 0 %}
+### [Interfaces](Interfaces) => overview?
+{% endif %#}
 
-{% if node.classes|length > 0 %}
-### [Classes](Classes)
-{% else %}
+{% if project.indexes.classes|length > 0 %}
 ### Classes
-`No classes have been found in this project`
+{% for class in project.indexes.classes|sort_asc %}
+##### [{{ class.name|raw }}](classes/{{ class.name }})
+
+{% endfor %}
 {% endif %}
 
-{% if node.constants|length > 0 %}
-### [Constants](Constants)
-{% else %}
+{% if project.indexes.constants|length > 0 %}
 ### Constants
-`No constants have been found in this project`
+{% for constant in project.indexes.constants|sort_asc %}
+##### [{{ constant.name|raw }}](files/{{ node.path|split('/')|last|replace({'.php':".php.md", '.js':".js.md"}) }})
+{% endfor %}
 {% endif %}
 
-{% if node.functions|length > 0 %}
-### [Functions](Functions)
-{% else %}
+{#% if project.indexes.functions|length > 0 %}
 ### Functions
-`No functions have been found in this project`
-{% endif %}
+{% for function in project.indexes.functions|sort_asc %}
+##### [{{ function.name|raw }}](files/{{ node.path|split('/')|last|replace({'.php':".php.md", '.js':".js.md"}) }})
+{% endfor %}
+{% endif %#}
